# stdout-rotator

./: Cargo.toml  README.md  Taskfile.yml
src/: main.rs
